# aptos-nft-aggregator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config-bluemove.yaml  config-example.yaml  config-test.yaml  config-topaz.yaml  config-tradeport.yaml  config-wapal.yaml  nft_marketplace  wapal.yaml
.github/scripts/: build_and_push_images.sh
.github/workflow/: copy-processor-images-to-dockerhub.yaml
.github/workflows/: copy-processor-images-to-dockerhub.yaml  integration-tests.yaml  lint.yaml
.history/.github/actions/dep_install_and_lint/: action_20250520143503.yaml  action_20250520143540.yaml  action_20250520143543.yaml
.history/.github/workflows/: build-images_20250520143421.yaml
read/: Cargo.toml  README.md
read/scripts/: build_and_push_images.sh
read/src/: lib.rs  main.rs  processor.rs
read/src/config/: marketplace_config.rs  mod.rs
read/src/config/example/: tradeport_v1.yaml  wagmi.yaml
read/src/postgres/: processor_status.rs  schema.rs
read/src/steps/: db_writing_step.rs  mod.rs  processor_status_saver_step.rs  remapper_step.rs
read/src/steps/remappers/: event_remapper.rs
read/src/utils/: mod.rs
read/tests/: integration_test.rs
read/tests/test_config/: wapal_test_marketplace_config.yaml
src/: lib.rs  main.rs  processor.rs
src/config/: marketplace_config.rs  mod.rs
src/config/example/: topaz.yaml  tradeport_v2.yaml  wagmi.yaml  wapal.yaml
src/db/: schema.rs
src/models/: mod.rs  nft_models.rs
src/postgres/: mod.rs  postgres_utils.rs  processor_status.rs  schema.rs
src/postgres/migrations/2025-02-11-221839_tables/: down.sql  up.sql
src/postgres/migrations/2025-02-21-015732_create_index/: down.sql  up.sql
src/postgres/migrations/2025-03-03-232402_add_current_listing/: down.sql  up.sql
src/postgres/migrations/2025-03-20-221149_pk-update/: down.sql  up.sql
src/postgres/migrations/2025-03-27-050413_move-processor-status/: down.sql
src/processors/: config_boilerplate.rs  marketplace_config.rs  mod.rs  models.rs  postgres_utils.rs  processor.rs  processor_status_saver.rs  util.rs
src/steps/: db_writing_step.rs  mod.rs  processor_status_saver_step.rs  reduction_step.rs  remapper_step.rs
src/steps/remappers/: event_remapper.rs  mod.rs  resource_remapper.rs
src/utils/: marketplace_resource_utils.rs  mod.rs  processor_status_saver.rs  starting_version.rs  util.rs
tests/: integration_test.rs
tests/test_config/: tradeport_v2_test_marketplace_config.yaml  wapal_test_marketplace_config.yaml
tests/test_data/: tradeport_v2_test_marketplace_config.yaml
write/: Move.toml  README.md
write/scripts/: aggregator_init.move  cancel_listing.move  marketplace_check.move  marketplace_list.move  marketplace_purchase.move  place_and_cancel_listing.move  register_aptos_marketplace.move  register_test_marketplace.move
write/sources/: aptos_adapter.move  marketplace_aggregator.move  test_adapter.move
write/third_party_dependencies/Marketplace/: Move.toml
write/third_party_dependencies/OnChainNftMarketplace/: Move.toml
write/third_party_dependencies/on_chain_nft_marketplace/: Move.toml
(+117 files in other folders)
