[package]
name = "nft-aggregator"
version = "0.1.0"
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-nft-aggregator"
rust-version = "1.81"

[dependencies]
ahash = { version = "0.8.7", features = ["serde"] }
anyhow = "1.0.86"
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "707b8bf33cad1a8143b9e81762d644f1be0451bb" }
aptos-indexer-testing-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "707b8bf33cad1a8143b9e81762d644f1be0451bb" }
aptos-indexer-processor-sdk-server-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "707b8bf33cad1a8143b9e81762d644f1be0451bb" }
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "1d8460a995503574ec4e9699d3442d0150d7f3b9" }
async-trait = "0.1.53"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bigdecimal = { version = "0.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
diesel = { version = "2.1", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "d02798c67065d763154d7272dd0c09b39757d0f2", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_async_migrations = { git = "https://github.com/niroco/diesel_async_migrations", rev = "11f331b73c5cfcc894380074f748d8fda710ac12" }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dirs = "5.0.1"
enum_dispatch = "0.3.12"
field_count = "0.1.1"
futures = "0.3.30"
futures-util = "0.3.21"

hash = "0.1.0"
hex = "0.4.3"
itertools = "0.12.1"
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jsonpath-rust = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.22"

# Postgres SSL support
native-tls = "0.2.11"
num_cpus = "1.16.0"
postgres-native-tls = "0.5.0"

rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }

sha2 = "0.10.8"
sha3 = "0.10.8"
serde_yaml = "0.9.34"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
    "zstd",
] }
tracing = "0.1.34"
url = { version = "2.4.0", features = ["serde"] }


aptos-indexer-test-transactions = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "b068cb3bbee1b6a7a5eb96f189bfdd7ad4542060" }
assert-json-diff = "2.0.2"
testcontainers = "0.20.1"
tempfile = "3.3.0"

[features]
libpq = ["diesel/postgres"]
default = ["libpq"]
